--- a/css/main.css
+++ b/css/main.css
@@ -118,14 +118,14 @@ body {
 header {
   text-align: center;
   color: white;
-  border: 14px solid #0c3e93;
+  border: 14px solid #aad583;
 }
 
 #extPhoto {
   background: linear-gradient(
-                     rgba(20,20,20, .5), 
-                     rgba(20,20,20, .5)),
-                     url(../img/toms-restaurant.jpg);
+                     rgba(20,20,20, .3), 
+                     rgba(20,20,20, .3)),
+                     url(../img/toa-heftiba-106427.jpg);
   background-size: cover;
   height: 100vh;
   background-attachment: fixed;
@@ -144,14 +144,15 @@ header {
 h1 {
   font-weight: 900;
   font-size: 5rem;
-  text-transform: uppercase;
   display:inline;
   /*margin: 2rem 0 0 0; */
 }
 
 header p {
-  font-weight: 700;
-  font-size: 2.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 2rem;
   margin: 0 0 2rem 0;
 }
 
@@ -160,44 +161,79 @@ header p {
 /* body =================================================================== */
 
 h2 {
-  text-align: center;
   font-size: 2.5rem;
-  margin-top: 5%;
+  font-weight: 900;
+  margin-top: 6%;
+  margin-bottom: 0;
   clear:both;
-  text-transform: uppercase;
+  color: #5c8537;
 }
 
 h3 {
   font-size: 1.5rem;
+  margin-bottom: 0;
+  margin-top: 2%;
+}
+
+p {
+  margin: 0 auto;
+}
+
+section {
+  margin: 0 10%;
+}
+
+#content {
+  width: 60%;
+  float: left;
+  display: inline; 
+}
+
+#images {
+  width: 35%;
+  float: left;
+  display: inline;
+  margin-top: 5%;  
+  margin-right: 5%;
+  margin-bottom: 5%;
+}
+
+#images img {
+  width:100%;
+}
+
+#images img:last-of-type{
+  margin-top: 5%;
 }
 
 form {
-  width: 50%;
+  width: 100%;
   float: left;
-  padding: 0 10% 4rem 10%;
 }
 
 input {
-  width: 100%;
+  width: 75%;
   margin: .25rem 0 1.5rem 0;
   border: 2px solid gray;
   padding: 1rem;
+  display: inline;
 }
 
 input:active {
-  border: 2px solid #0c3e93;
+  border: 2px solid #5c8537;
 }
 
-aside {
-  width: 50%;
+/*aside {
   width: 50%;
   float: left;
   padding: 0 10% 4rem 10%;
-}
+}*/
+
+
 
 button {
-  color: #0c3e93;
-  border: 4px solid #0c3e93;
+  color: #5c8537;
+  border: 4px solid #5c8537;
   background-color: white;
   padding: .5rem 1rem;
   font-weight: 700;
@@ -205,8 +241,8 @@ button {
 
 button:hover {
   color: white;
-  border: 4px solid #0c3e93;
-  background-color: #0c3e93;
+  border: 4px solid #5c8537;
+  background-color: #5c8537;
 }
 
 table {
@@ -218,7 +254,31 @@ td {
   color: gray;
 }
 
-#jerryImg {
+
+#map {
+  width: 50%;
+  height: 400px;
+  background-color: grey;
+  margin:0 10%;
+}
+
+footer {
+  background-color: #5c8537;
+  color: white;
+  clear:both;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer p:first-of-type {
+  font-weight: 700;
+}
+
+/* #jerryImg {
   margin-left: 10%;
   margin-bottom: 5%;
   max-width: 50%;
@@ -245,29 +305,8 @@ td {
   font-weight: 500;
   padding-top: 1rem;
 }
+*/
 
-#map {
-  width: 80%;
-  height: 400px;
-  background-color: grey;
-  margin:0 10%;
-}
-
-footer {
-  background-color: black;
-  color: white;
-  clear:both;
-  text-align: center;
-  padding: 1rem 0;
-}
-
-footer p {
-  margin: 0;
-}
-
-footer p:first-of-type {
-  font-weight: 700;
-}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
