--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ textarea {
 }
 
 body {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 
@@ -134,7 +134,7 @@ header {
 .center-content {
   width:45%;
   margin: 0 auto;
-  padding: 1.5rem 1.5rem 0 1.5rem;
+  padding: 2.5rem 1.5rem 1rem 1.5rem;
   position: relative;
   top: 40%;
   transform: translateY(-50%);
@@ -145,6 +145,7 @@ h1 {
   font-weight: 900;
   font-size: 5rem;
   display:inline;
+
   /*margin: 2rem 0 0 0; */
 }
 
@@ -153,7 +154,7 @@ header p {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 2rem;
-  margin: 0 0 2rem 0;
+  margin: 1rem 0 2rem 0;
 }
 
 
@@ -171,12 +172,14 @@ h2 {
 
 h3 {
   font-size: 1.5rem;
-  margin-bottom: 0;
-  margin-top: 2%;
+  font-weight: 700;
+  margin-bottom: .5rem;
+  margin-top: 1.75rem;
 }
 
 p {
   margin: 0 auto;
+  line-height: 1.75rem;
 }
 
 section {
@@ -209,27 +212,29 @@ section {
 form {
   width: 100%;
   float: left;
+  margin-bottom: 5%;
 }
 
-input {
-  width: 75%;
+/* input {
   margin: .25rem 0 1.5rem 0;
   border: 2px solid gray;
-  padding: 1rem;
-  display: inline;
+  border-radius: 3px;
+  padding: .85rem 1rem;
 }
 
 input:active {
   border: 2px solid #5c8537;
 }
 
-/*aside {
-  width: 50%;
-  float: left;
-  padding: 0 10% 4rem 10%;
-}*/
+.form-group, .dropdown {
+  display:inline;
+}
 
-
+.dropdown-toggle {
+  order: 2px solid gray;
+  border-radius: 3px;
+  padding: 1rem;
+}
 
 button {
   color: #5c8537;
@@ -237,17 +242,18 @@ button {
   background-color: white;
   padding: .5rem 1rem;
   font-weight: 700;
-}
+} 
 
 button:hover {
   color: white;
   border: 4px solid #5c8537;
   background-color: #5c8537;
-}
+} */
 
 table {
   width: 100%;
   text-align: left;
+  margin-bottom: 5%;
 }
 
 td {
@@ -256,7 +262,7 @@ td {
 
 
 #map {
-  width: 50%;
+  width: 60%;
   height: 400px;
   background-color: grey;
   margin:0 10%;
